--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body bgcolor=white>
 <div id="b1">
       <div id="b2">
-    <img src="olishka.github.io" width="360" height="150">
+    <img src="matematika.jpg" width="360" height="150">
   </div> 
           <div id="b3">
     <ul>   
